CHANGELOG:

Build #012:
- [TLR] Added Pearian Supremacy civ, General Pear leader.
  - UB: Watch Tower (Castle that reduces city maintenance)
  - UU: Guardian (Longbowman with extra movement points, first strikes)
- [Pz] Added button, flag for Saltian Commonwealth civ.
- [Pz] Minor Spellcheck.

Build #011 [Stinger]:
-Added a new folder in Assets/Sounds called Diplomacy. This contains the piece of music I intend to use.
-Added my own civ, the Zarosian Empire. Leader is called Occultus (Deceptive/Protective).
UNIQUE UNIT: Deceiver - Spy with Double Movement Speed and starts with Deception 1 promotion.
UNIQUE BUILDING: Den of Spies - Library with +2 espionage and 2 spy specialists.
*NOTE: Coding for Espionage Units will need to be looked at, as currently they don't have any promotions.

Build #010 [Pz]:
- Minor changes to buildings.
- [ANQ] Minor changes to audio.

Build #009 [Pz]:
- Added Seafaring, Deceptive, Scientific, Humanitarian, Productuve and Commercial traits.
- Changed some existing traits a smidge.
- Added my personal Civ (Saltian Commonwealth) and leaders (Admiral Pretzle [Prd/Sea], Pretzle Rex [Prd/Agg]).
  - UB: Refinery (Forge with +35% hammers vs. +25%, some health benefits from resources) (Subject to change)
  - UU: Bombardier (Grenadier with collateral damage potential, +25% attack vs. archery and gunpowder units, replaced the +50% attack vs. rifles)
- Changed Video Games Studio artwork to that of Civilized Jewelers Headquarters.
- Unique graphics still not included for any of the above - 'tis my next goal.
- Removed free commando promotion from spies in line with Super Spies mod.
- Spellchecked Al.
- [ANQ] [TLR] Added some new audio for the Modern Espionage tech.

V0.8:
- New Spy Missions Tied to new tech "Modern Espionage"
- "Bribe City" Mission Removed
- Fixed:Era once again displayed in the HUD
- First to Discover Modern Espionage recieves a great Spy
- Civlopedia entries cleaned up.
- Renamed to DTM to allow for use with Github