@@ -30685,8 +30685,8 @@
 			<Type>BUILDING_DEN_SPIES</Type>
 			<SpecialBuildingType>NONE</SpecialBuildingType>
 			<Description>Fifth Column</Description>
-			<Civilopedia>PlaceHolder</Civilopedia>	
-			<Strategy>PlaceHolder</Strategy>
+			<Civilopedia>A fifth column is a group of people who clandestinely undermine a larger group, such as a nation, from within. A fifth column can be a group of secret sympathizers of an enemy that are involved in sabotage within military defense lines, or a country's borders.</Civilopedia>	
+			<Strategy>The [COLOR_BUILDING_TEXT]Fifth Column[COLOR_REVERT] permanently reduces espionage and espionage defence in a target city.</Strategy>
 			<Help>TXT_KEY_BUILDING_DEN_SPIES_HELP</Help>	
 			<Advisor>ADVISOR_MILITARY</Advisor>
 			<ArtDefineTag>ART_DEF_BUILDING_DEN_SPIES</ArtDefineTag>
@@ -30797,7 +30797,7 @@
 			<iDefense>0</iDefense>
 			<iBombardDefense>0</iBombardDefense>
 			<iAllCityDefense>0</iAllCityDefense>
-			<iEspionageDefense>0</iEspionageDefense>
+			<iEspionageDefense>-10</iEspionageDefense>
 			<iAsset>6</iAsset>
 			<iPower>2</iPower>
 			<fVisibilityPriority>1.0</fVisibilityPriority>
@@ -30807,12 +30807,15 @@
 			<YieldChanges/>
 			<YieldModifiers>
 				<iYield>0</iYield>
-				<iYield>-5</iYield>
+				<iYield>0</iYield>
 				<iYield>0</iYield>
 			</YieldModifiers>
 			<PowerYieldModifiers/>
 			<CommerceChanges>
-				<iCommerce>-2</iCommerce>
+				<iCommerce>0</iCommerce>
+				<iCommerce>0</iCommerce>
+				<iCommerce>0</iCommerce>
+				<iCommerce>-4</iCommerce>
 			</CommerceChanges>			
 			<ObsoleteSafeCommerceChanges/>
 			<CommerceChangeDoubleTimes/>
